improve: add ListRowStat for unitable for get statistics for the column when using the same query expression with ListRow.
