# java/src/main/java/io/ncraft/armory/unitable/v1/ListRowStatRequestOrBuilder.java
@@ -1,0 +1,130 @@
+// Generated by the protocol buffer compiler.  DO NOT EDIT!
+// source: armory/unitable/v1/unitable.proto
+
+package io.ncraft.armory.unitable.v1;
+
+public interface ListRowStatRequestOrBuilder extends
+    // @@protoc_insertion_point(interface_extends:armory.unitable.v1.ListRowStatRequest)
+    com.google.protobuf.MessageOrBuilder {
+
+  /**
+   * <code>string database = 1;</code>
+   * @return The database.
+   */
+  java.lang.String getDatabase();
+  /**
+   * <code>string database = 1;</code>
+   * @return The bytes for database.
+   */
+  com.google.protobuf.ByteString
+      getDatabaseBytes();
+
+  /**
+   * <code>string table = 2;</code>
+   * @return The table.
+   */
+  java.lang.String getTable();
+  /**
+   * <code>string table = 2;</code>
+   * @return The bytes for table.
+   */
+  com.google.protobuf.ByteString
+      getTableBytes();
+
+  /**
+   * <code>repeated string stats = 3;</code>
+   * @return A list containing the stats.
+   */
+  java.util.List<java.lang.String>
+      getStatsList();
+  /**
+   * <code>repeated string stats = 3;</code>
+   * @return The count of stats.
+   */
+  int getStatsCount();
+  /**
+   * <code>repeated string stats = 3;</code>
+   * @param index The index of the element to return.
+   * @return The stats at the given index.
+   */
+  java.lang.String getStats(int index);
+  /**
+   * <code>repeated string stats = 3;</code>
+   * @param index The index of the value to return.
+   * @return The bytes of the stats at the given index.
+   */
+  com.google.protobuf.ByteString
+      getStatsBytes(int index);
+
+  /**
+   * <code>int32 page_size = 2000;</code>
+   * @return The pageSize.
+   */
+  int getPageSize();
+
+  /**
+   * <code>string page_token = 2001;</code>
+   * @return The pageToken.
+   */
+  java.lang.String getPageToken();
+  /**
+   * <code>string page_token = 2001;</code>
+   * @return The bytes for pageToken.
+   */
+  com.google.protobuf.ByteString
+      getPageTokenBytes();
+
+  /**
+   * <code>int32 skip = 2002;</code>
+   * @return The skip.
+   */
+  int getSkip();
+
+  /**
+   * <code>string filter = 2011;</code>
+   * @return The filter.
+   */
+  java.lang.String getFilter();
+  /**
+   * <code>string filter = 2011;</code>
+   * @return The bytes for filter.
+   */
+  com.google.protobuf.ByteString
+      getFilterBytes();
+
+  /**
+   * <code>.mojo.core.Ordering order = 2012;</code>
+   * @return Whether the order field is set.
+   */
+  boolean hasOrder();
+  /**
+   * <code>.mojo.core.Ordering order = 2012;</code>
+   * @return The order.
+   */
+  org.mojolang.mojo.core.Ordering getOrder();
+  /**
+   * <code>.mojo.core.Ordering order = 2012;</code>
+   */
+  org.mojolang.mojo.core.OrderingOrBuilder getOrderOrBuilder();
+
+  /**
+   * <code>.mojo.core.FieldMask field_mask = 2013;</code>
+   * @return Whether the fieldMask field is set.
+   */
+  boolean hasFieldMask();
+  /**
+   * <code>.mojo.core.FieldMask field_mask = 2013;</code>
+   * @return The fieldMask.
+   */
+  org.mojolang.mojo.core.FieldMask getFieldMask();
+  /**
+   * <code>.mojo.core.FieldMask field_mask = 2013;</code>
+   */
+  org.mojolang.mojo.core.FieldMaskOrBuilder getFieldMaskOrBuilder();
+
+  /**
+   * <code>bool unique = 2014;</code>
+   * @return The unique.
+   */
+  boolean getUnique();
+}
