# java/src/main/java/io/ncraft/armory/unitable/v1/ListRowStatResponseOrBuilder.java
@@ -1,0 +1,51 @@
+// Generated by the protocol buffer compiler.  DO NOT EDIT!
+// source: armory/unitable/v1/unitable.proto
+
+package io.ncraft.armory.unitable.v1;
+
+public interface ListRowStatResponseOrBuilder extends
+    // @@protoc_insertion_point(interface_extends:armory.unitable.v1.ListRowStatResponse)
+    com.google.protobuf.MessageOrBuilder {
+
+  /**
+   * <code>repeated .mojo.core.Object objects = 1;</code>
+   */
+  java.util.List<org.mojolang.mojo.core.Object> 
+      getObjectsList();
+  /**
+   * <code>repeated .mojo.core.Object objects = 1;</code>
+   */
+  org.mojolang.mojo.core.Object getObjects(int index);
+  /**
+   * <code>repeated .mojo.core.Object objects = 1;</code>
+   */
+  int getObjectsCount();
+  /**
+   * <code>repeated .mojo.core.Object objects = 1;</code>
+   */
+  java.util.List<? extends org.mojolang.mojo.core.ObjectOrBuilder> 
+      getObjectsOrBuilderList();
+  /**
+   * <code>repeated .mojo.core.Object objects = 1;</code>
+   */
+  org.mojolang.mojo.core.ObjectOrBuilder getObjectsOrBuilder(
+      int index);
+
+  /**
+   * <code>int32 total_count = 2000;</code>
+   * @return The totalCount.
+   */
+  int getTotalCount();
+
+  /**
+   * <code>string next_page_token = 2001;</code>
+   * @return The nextPageToken.
+   */
+  java.lang.String getNextPageToken();
+  /**
+   * <code>string next_page_token = 2001;</code>
+   * @return The bytes for nextPageToken.
+   */
+  com.google.protobuf.ByteString
+      getNextPageTokenBytes();
+}
